# gtheme

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  build.rs  colors.conf  global_config.json  install.sh  kitty.conf  kitty.pattern  t  user_settings.toml
assets/: help.txt  logo.txt
completions/: _gtheme  _gtheme.ps1  gtheme.bash  gtheme.elv  gtheme.fish
desktops/elektropunk/: credits
desktops/eleven/: credits  desktop_config.json  requirements.txt
desktops/japan/: credits  desktop_config.json  desktop_info.toml  requirements
desktops/jorge/: desktop_config.json  desktop_config.json.tmp
desktops/minimal/: desktop_config.json  desktop_info.toml  requirements.txt
desktops/mountain/: credits.txt
desktops/night/: desktop_config.json  desktop_info.toml
desktops/retro/: desktop_config.json  desktop_info.toml  requirements.txt
desktops/simple/: desktop_config.json  desktop_info.toml  info.toml  requirements.txt
desktops/wip/: credits  (+3 more)
manpage/: gtheme.1
src/: lib.rs
themes/: 3024-Day.json  3024-Light.json  3024-Night.json  AdventureTime.json  Afterglow.json  AlienBlood.json  Alucard.json  Apathy-dark.json  Apathy-light.json  Apprentice.json  Argonaut.json  Arthur.json  Ashes-dark.json  Ashes-light.json  Astromouse.json  AtelierSulphurpool.json  Atelierdune-dark.json  Atelierdune-light.json  Atelierforest-dark.json  Atelierforest-light.json  Atelierheath-dark.json  Atelierheath-light.json  Atelierlakeside-dark.json  Atelierlakeside-light.json  Atelierseaside-dark.json  Atelierseaside-light.json  Atom.json  AtomOneLight.json  Awesome.json  Ayu-Light.json  Ayu-Mirage.json  Ayu.json  Base16-Default-Dark.json  Baskerville-CountVonCount.json  Baskerville-Eldoradodark.json  Baskerville-FarSide.json  Baskerville-ivorydark.json  Baskerville-ivorylight.json  Baskerville-lostwoods.json  Batman.json  (+339 more)
utils/: theme.json  tojson.sh
(+375 files in other folders)
