[package]
name = "gtheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "gtheme"
path = "src/bin/main.rs"
doc = false

[lib]
test = true
doctest = false
doc = false

[dependencies]
shellexpand = "2.1.0"
regex="1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.17"
crossterm = "0.22"
