[package]
name = "gtheme"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gtheme"
path = "src/bin/main.rs"
doc = false

[lib]
test = true
doctest = false
doc = false

[build-dependencies]
clap = "3.1.6"
clap_complete = "3.1.1"
clap_mangen = "0.1.2"

[dependencies]
shellexpand = "2.1.0"
regex="1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.17"
tui-logger = "0.7.1"
crossterm = "0.22"
fs_extra = "1.2.0"
tint = "1.0.1"
log = "0.4.14"
clap = "3.1.6"
colored = "2.0.0"
term_grid = "0.2.0"
terminal_size = "0.1.17"
chrono = "0.4.15"
toml = "0.5"
