[package]
name = "gtheme"
version = "0.1.0"
edition = "2021"
authors = ["David Rodríguez","Jorge Hermo"]
license = "MIT OR Apache-2.0"


[[bin]]
name = "gtheme"
path = "src/bin/main.rs"
doc = false

[lib]
test = true
doctest = false
doc = false

[dependencies]
clap_complete = "3.1.1"
shellexpand = "2.1.0"
regex="1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.17"
tui-logger = "0.7.1"
crossterm = "0.22"
fs_extra = "1.2.0"
hex = "0.4.3"
log = "0.4.14"
clap = "3.1.6"
colored = "2.0.0"
term_grid = "0.2.0"
terminal_size = "0.1.17"
chrono = "0.4.15"
toml = "0.5"
file-rotate = "0.6.0"
